Fix word wrap

--- a/less/bootstrap-theme/global.less
+++ b/less/bootstrap-theme/global.less
@@ -13,6 +13,8 @@ body {
 
     /* Support for IE. */
     font-feature-settings: 'liga';
+
+    word-wrap: break-word;
 }
 
 .big-text {
